Fixed status text form wrapping on Firefox.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -1593,6 +1593,7 @@ home-modal-inner-width = home-modal-width - 2 * home-modal-horiz-padding
   bottom 85px
   width room-sidebar-width + 50px
   animation-duration .4s
+  text-transform none
 
   > .menu-item
     cursor default
